# pyssdp-server

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
pyssdp_server/: main.py  services.py
